# CAGECAT

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
cagecat_web/: make_celery.py  pyproject.toml
cagecat_web/cagecat_web/: celery_app.py  cleanup_jobs.py  config.py  main.py
cagecat_web/cagecat_web/analysis/: general_manager.py  input_processor_cblaster.py  jobs.py  session_processor.py  tasks.py  validation.py
cagecat_web/cagecat_web/analysis/neighborhood/: __init__.py  ncbi.py  runner.py
cagecat_web/cagecat_web/analysis/tools/: __init__.py  base.py  cblaster.py  cblaster_actions.py  clinker.py  neighborhood.py
cagecat_web/cagecat_web/routes/: api_router.py  jobs_router.py
cagecat_web/cagecat_web/static/css/: style.css
cagecat_web/cagecat_web/static/js/: jobs.js  main.js  plasmidviz.js  results.js  results_neighborhood.js  seqparse.js  start_neighborhood.js  theme.js  vizcommon.js
cagecat_web/cagecat_web/templates/base/: base.html  footer.html  navbar.html  statusbar.html
cagecat_web/cagecat_web/templates/components/: macros.html
cagecat_web/cagecat_web/templates/pages/: about.html  contact.html  documentation.html  index.html  plasmidviz.html  results.html  results_neighborhood.html  start_cblaster.html  start_clinker.html  start_neighborhood.html
cagecat_web/tests/: conftest.py  test_actions.py  test_api.py  test_cblaster_input.py  test_clinker.py  test_jobs.py  test_ncbi_neighborhood.py  test_neighborhood_runner.py  test_validation.py
compose/cagecat_web/: Dockerfile  entrypoint.sh
compose/cagecat_web/patches/: sitecustomize.py
compose/nginx/: Dockerfile  nginx.conf
