[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Repository" = "https://github.com/HAugustijn/CAGECAT.git"

[project]
name = "cagecat_web"
version = "2.0.0"
description = "CAGECAT: The comparative gene cluster analysis toolbox for rapid search and visualisation of homologous gene clusters"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Hannah E. Augustijn" }
]
keywords = [
    "gene cluster",
    "genomics",
    "bioinformatics",
    "blast"
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]

dependencies = [
    # Lower bounds guarantee the request-first `TemplateResponse` signature and
    # keep unpinned upgrades reproducible.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=21",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic-settings~=2.0",
    "celery[redis]~=5.3",
    "biopython~=1.83",
]

[project.optional-dependencies]
dev = [
    "pre-commit~=3.4",
    "pytest~=7.4",
    "httpx~=0.27",
    "ruff~=0.5"
]

tools = [
    "cblaster",
    "clinker",
]

[tool.hatch.envs.dev]
features = [
    "dev"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/",
]
pythonpath = [
    "."
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
]
ignore = [
    # whitespace-before-punctuation
    "E203",
    # unneccesary True False
    "SIM210",
    # combine nested if conditionals
    "SIM102",
    # if-else block
    "SIM108"
]

[tool.ruff.lint.flake8-bugbear]

extend-immutable-calls = [
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]